@@ -244,15 +244,15 @@ public class ControlPanelEditorXml extends AbstractXmlAdapter {
             String adapterName = item.getAttribute("class").getValue();
             log.debug("load via {}", adapterName);
             try {
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 // and do it
                 adapter.load(item, panel);
                 if (!panel.loadOK()) {
                     result = false;
                 }
             } catch (ClassNotFoundException | InstantiationException 
-                    | jmri.configurexml.JmriConfigureXmlException | IllegalAccessException
-                    | RuntimeException e) {
+                    | jmri.configurexml.JmriConfigureXmlException | IllegalAccessException 
+                    | NoSuchMethodException | java.lang.reflect.InvocationTargetException e) {
                 log.error("Exception while loading {}: {}", item.getName(), e.getMessage(), e);
                 result = false;
             }
